--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="reset.css">
-		<link rel="stylesheet" type="text/css" href="Hadley P CV-styles.css">
+		<link rel="stylesheet" type="text/css" href="styles/reset.css">
+		<link rel="stylesheet" type="text/css" href="styles/Hadley P CV-styles.css">
 		<link href='https://fonts.googleapis.com/css?family=Exo+2:400,100,700,100italic,400italic,700italic' rel='stylesheet' type='text/css'>
 		<script src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 		<script type="text/javascript" src="app.js"></script>
@@ -44,7 +44,7 @@
 					<a href="https://en.wikipedia.org/wiki/User:PatHadley" target="_blank"><li id="wikipedia"><p>wikipedia</p></li></a>
 				</ul>
 			</div>
-			<img src="Hadley P CV Hero Image1.jpg" alt="Pat Hadley delivering a training session at the Yorkshire Museum">
+			<img src="resources/Hadley P CV Hero Image1.jpg" alt="Pat Hadley delivering a training session at the Yorkshire Museum">
 		</section>
 		<section class="main">
 			<h3  id="employment" class="offset">employment</h3>
